--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ajax-fetch-and-axios-lab-template",
   "version": "1.0.0",
-  "description": "",
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
@@ -21,5 +20,8 @@
   "resolutions": {
     "@babel/preset-env": "7.13.8"
   },
-  "keywords": []
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
